--- a/style.css
+++ b/style.css
@@ -3,4 +3,39 @@
     padding: 5px;
     border-radius: 5px;
     color: tomato;
+    
+}
+
+#title{
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.quiz-container{
+    position: relative;
+    background-color: #f8f6f0;
+    font-size: 17px;
+    color: #333;
+    height: 150px;
+    text-align: center;
+    font-weight: 300;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.slide{
+    z-index: 1;
+    opacity: 0;
+    position: absolute;
+}
+
+.active-slide{
+    z-index: 2;
+    opacity: 1;  
 }
